Added a jupyter notebook to help exlpore the sites on Mind2web

--- a/environments/01_Simple_Ecommerce/AIA.html
+++ b/environments/01_Simple_Ecommerce/AIA.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header" role="banner">
     <div class="container nav">
-      <a class="brand" href="home.html">Headphone Shop</a>
+      <a class="brand" href="AIA.html">Headphone Shop</a>
       <button id="btn-view-cart" class="btn" style="font-size:20px;padding:14px 20px;margin-left:auto"
               aria-label="View Cart and proceed to checkout"
               onclick="location.href='../metrics/finished.html'">
